--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.2",
+    "@react-navigation/stack": "^5.8.0",
+    "faker": "^4.1.0",
+    "formik": "^2.1.5",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-paper": "^4.0.1",
+    "react-native-reanimated": "^1.10.1",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.1",
+    "realm": "^6.0.3",
+    "redux": "^4.0.5",
+    "yup": "^0.29.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
